# Pseudo-Boolean-Presolver

./: .gitignore  CMakeLists.txt  README.md  echo_script.sh  parameters.opb.txt  parameters.test.txt  roundingsat  soplex-5.0.1.tgz
include/: buildMIPProblem.hpp  headFiles.hpp  runRoundingSat.hpp  utils.hpp
papilo/: CMakeLists.txt  README.md
param/: decmip1.txt  decmipMix.txt  decmipMix2.txt  defaultMIP.txt  defaultSAT.txt  offMIP.txt  offSAT.txt  onlyCoeffStrengthen.txt  onlyColSingleton.txt  onlyDomCol.txt  onlyDoubletoneq.txt  onlyDualFix.txt  onlyParallelRow.txt  onlyProbing.txt  onlyPropagation.txt  onlyPure.txt  onlyPureLit.txt  onlySimpleProbing.txt  onlySimplifyIneq.txt  onlySparsify.txt  onlyStuffing.txt  onlyhbr.txt  onlyredundacy.txt  optmip1.txt  optmipMix.txt  optmipMix2.txt  parameters.test.txt  printPresolveNames.txt  sat.txt
scripts/: configcluster.sh  declhs.sh  decmid.sh  decrhs.sh  drun.sh  drunall.sh  go-dec.py  go-opt.py  go.py  heuristic.sh  heuristic2.sh  heuristic3.sh  lhs.sh  local.sh  optlhs.sh  optmid.sh  optrhs.sh  orun.sh  orunall.sh  parse.sh  parseall.sh  parseopt.sh  pretest.py  rhs.sh  run.sh  runpre.py  test.sh
src/: Constr.cpp  Constr.hpp  MIP.cpp  MIP.hpp  SAT.cpp  SAT.hpp  auxiliary.hpp  buildMIPProblem.hpp  headFiles.hpp  main.cpp  mainapp.cpp  parsing.cpp  parsing.hpp  quit.cpp  quit.hpp  roundingsat.cpp  run.cpp  run.hpp  runRoundingSat.cpp  runRoundingSat.hpp  typedef.hpp  utils.cpp  utils.hpp
src/presolving/: Auxiliary.hpp  Constr.cpp  Constr.hpp  MIP.cpp  MIP.hpp  SAT.cpp  SAT.hpp  Typedef.hpp  auxiliary.hpp  parsing.cpp  parsing.hpp  presolve.cpp  presolve.hpp  runRoundingSat.cpp  runRoundingSat.hpp  utils.cpp  utils.hpp
test/: -param.csv  a.out  allfile.txt  bm.opb  decfile.txt  decompress.py  findAll.py  findDec.py  findOpt.py  logger copy.txt  logger.txt  merge.py  mergeopt.py  onCluster.py  pretest.py  run.sh  test.cpp
test/dec/: 0-logger.txt  0-paraDoc.txt  128ebits_0.pre.opb  128ebits_any.pre.opb  21array_alg_ineq7.pre.opb  22array_alg_ineq7.pre.opb  256ebits_0.pre.opb  256ebits_any.pre.opb  32array_alg_ineq5.pre.opb  air01.0.s.pre.opb  air01.0.u.pre.opb  air02.0.s.pre.opb  air02.0.u.pre.opb  air06.0.s.pre.opb  air06.0.u.pre.opb  bm23.0.s.pre.opb  bm23.0.u.pre.opb  cracpb1.0.s.pre.opb  cracpb1.0.u.pre.opb  (+15 more)
(+7743 files in other folders)
